--- a/html/riddle.html
+++ b/html/riddle.html
@@ -6,8 +6,6 @@
 
         </div>
         <div class="col-sm-10">
-            <form class="needs-validation" novalidate>
-
             <table class="table">
                 <thead>
                     <tr>
@@ -22,7 +20,7 @@
                         <td>If you flip a valid coin three times, what are the odds of it to fall of tails al least once?</td>
                         <td>
                             <div class="md-form">
-                                <input type="text" id="riddle_1" class="form-control" required>
+                                <input type="text" id="riddle_1" class="form-control">
                                 <label for="riddle_1">Answer 1 </label>
                             </div>
                         </td>
@@ -32,7 +30,7 @@
                         <td>A frog fell into a 30m’ deep hole. Every day she climbs 3m’ but then falls back down 2m’. How many days will it take for the frog to get out of the hole?</td>
                         <td>
                             <div class="md-form">
-                                <input type="text" id="riddle_2" class="form-control" required>
+                                <input type="text" id="riddle_2" class="form-control">
                                 <label for="riddle_2">Answer 2 </label>
                             </div>
                         </td>
@@ -42,7 +40,7 @@
                         <td>Apple mash contains 99% water and 1% apples. I left 100kg of apple mash in the sun and a portion of the water evaporated. Now the apple mash consist only 98% water. What is the weight of the apple mash?</td>
                         <td>
                             <div class="md-form">
-                                <input type="text" id="riddle_3" class="form-control" required>
+                                <input type="text" id="riddle_3" class="form-control">
                                 <label for="riddle_3">Answer 3 </label>
                             </div>
                         </td>
@@ -53,7 +51,7 @@
                         <td>An exam for a disease with a 1/1000 frequency gives a false-positive 5% of the times. What are the odds for an ill person to get a positive result?</td>
                         <td>
                             <div class="md-form">
-                                <input type="text" id="riddle_4" class="form-control" required>
+                                <input type="text" id="riddle_4" class="form-control">
                                 <label for="riddle_4">Answer 4 </label>
                             </div>
                         </td>
@@ -64,7 +62,7 @@
                         <td>A bakery bakes 400 cookies every day. When the manager does not look, 20% of the cookies are thrown away. How many extra cookies does the manager has to back to make it up?</td>
                         <td>
                             <div class="md-form">
-                                <input type="text" id="riddle_5" class="form-control" required>
+                                <input type="text" id="riddle_5" class="form-control">
                                 <label for="riddle_5">Answer 5 </label>
                             </div>
                         </td>
@@ -76,7 +74,7 @@
                         <td>Bob stands in a queue. He counts the pepole ahead of him and finds out that he is in the 38th place. Then he counts the pepole behind him and finds out he is in the 56th place from last place. How many pepole are in the queue?</td>
                         <td>
                             <div class="md-form">
-                                <input type="text" id="riddle_6" class="form-control" required>
+                                <input type="text" id="riddle_6" class="form-control">
                                 <label for="riddle_6">Answer 6 </label>
                             </div>
                         </td>
@@ -88,7 +86,7 @@
                         </td>
                         <td>
                             <div class="md-form">
-                                <input type="text" id="riddle_7" class="form-control" required>
+                                <input type="text" id="riddle_7" class="form-control">
                                 <label for="riddle_7">Answer 7 </label>
                             </div>
                         </td>
@@ -96,13 +94,15 @@
 
                     <tr>
                         <td colspan="3">
-                            <button class="btn btn-md btn-info m-0 px-3" type="submit" ng-click="show_test()">Go!</button>
+                            <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="show_test()">Go!</button>
+                            <div id="riddle_err_log">
+
+                            </div>
                         </td>
                     </tr>
                 </tbody>
 
             </table>
-            </form>
         </div>
 
 
